fix menu layout

--- a/index.html
+++ b/index.html
@@ -5,18 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Movistar</title>
 </head>
 <body>
+
+    <div class="hero-message-container"></div>
     <section class="hero">
-        <img class="hero-image" src="" alt="">
-        <div class="logo"><img src="" alt=""></div>
-        <article class="hero-message">
-            <h2 class="hero-message-title"></h2>
-            <p class="hero-message-content"></p>
-            <button class="hero-message-button"></button>
-        </article>
+            <a href="https://smartfit.com.co/sedes/tintal-plaza" class="hero-link">Aplican términos y condiciones</a>
+            <article class="hero-message">
+                <img class="logo" src="assets/logo-movistar-money.png" alt="">
+                <h2 class="hero-message-title">¡Te damos la bienvenida!</h2>
+                <p class="hero-message-content">Movistar Money llega para ayudarte
+                    con tus finanzas personales, conoce nuestras 
+                    soluciones de crédito ágiles y 100% digitales.
+                </p>
+                <button class="hero-message-button"> <a href="">Saber más</a> </button>
+            </article>
+        
+        <div class="hero-image-container">
+            <img src="assets/hero-image.png" alt="" class="hero-image">
+            <!-- <a href="https://smartfit.com.co/sedes/tintal-plaza" class="hero-aside-link">Aplican términos y condiciones</a> -->
+        </div>
     </section>
+
+    
+
     <section class="first-section">
         <p></p>
         <div class="form"></div>
