--- a/index.html
+++ b/index.html
@@ -31,20 +31,29 @@
     
 
     <section class="first-section">
-        <p></p>
-        <div class="form"></div>
+        <p>
+            Pronto estaremos contigo, <strong> llegaremos a romper barreras de inclusión 
+                financiera  </strong> con opciones de crédito hechas a tu medida, de fácil acceso, 
+            innovadoras y transparentes.
+        </p>
+        <div class="first-section-form" ></div>
     </section>
 
     <section class="second-section">
-        <img src="" alt="">
+        <img class="second-section-image" src="assets/description2-image.png" alt="">
         <div class="second-section-content">
             <article>
-                <h3>
-                <p></p>
+                <h3 class="second-section-content-subtitle subtitle">Proceso digital </h3>
+                <p class="second-section-content-paragraph  section-paragraph">¡Sin filas ni 
+                    papeleos! Las solicitudes de crédito con Movistar Money se realizan 
+                    en línea desde donde estés.
+                </p>
             </article>
             <article>
-                <h3>
-                <p></p>
+                <h3 class="second-section-content-subtitle subtitle">Aprobación inmediata </h3>
+                <p class="second-section-content-paragraph section-paragraph">Hacemos que tu 
+                    experiencia sea ágil e innovadora, con un proceso de aprobación inmediato y respuesta en línea.
+                </p>
             </article>
         </div>
     </section>
@@ -52,7 +61,7 @@
     <section class="third-section">
         <div class="second-section-content">
             <article>
-                <h3>
+                <h3 ></h3>
                 <p></p>
             </article>
             <article>
