third section layout

--- a/index.html
+++ b/index.html
@@ -59,16 +59,26 @@
     </section>
     
     <section class="third-section">
-        <div class="second-section-content">
+        <div class="third-section-content">
             <article>
-                <h3 ></h3>
-                <p></p>
+                <h3 class="third-section-content-subtitle subtitle" >Fácil y seguro</h3>
+                <p class="third-section-content-paragraph section-paragraph">
+                    Sólo debes seguir unos sencillos pasos para 
+                    completar tu solicitud y durante todo el proceso 
+                    tus datos siempre estarán protegidos y serán 
+                    tratados bajo la política de tratamiento de datos.
+                </p>
             </article>
             <article>
-                <h3>
-                <p></p>
+                <h3 class="third-section-content-subtitle subtitle" > Experiencia personalizada </h3>
+                <p class="third-section-content-paragraph section-paragraph">
+                    Entendemos las necesidades de cada cliente, por esto traemos ofertas especiales
+                    y personalizadas, llevándote así, por una experiencia única y hecha a tu medida.
+                </p>
             </article>
             <img src="" alt="">
+        </div>
+        <div class="third-section-image-container"> <div class="third-section-image"></div></div>
     </section>
 
     <footer>
