--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </article>
             <article>
                 <h3 class="third-section-content-subtitle subtitle" > Experiencia personalizada </h3>
-                <p class="third-section-content-paragraph section-paragraph">
+                <p class="third-section-content-paragraph section-paragraph last-paragraph">
                     Entendemos las necesidades de cada cliente, por esto traemos ofertas especiales
                     y personalizadas, llevándote así, por una experiencia única y hecha a tu medida.
                 </p>
@@ -81,17 +81,24 @@
         <div class="third-section-image-container"> <div class="third-section-image"></div></div>
     </section>
 
-    <footer>
-        <div class="more-about">
-            <h4 class="more-bout-title">
-            <a href="" class="more-about-link">
-            </a><a href="" class="more-about-link">
-            </a><a href="" class="more-about-link"></a>
+    <footer class="footer">
+
+        <div class="footer-container">
+            <div class="more-about">
+                <h4 class="more-about-title"> Más de nosotros </h4>
+                <a href="" class="more-about-link">Política de cobranzas</a>
+                <a href="" class="more-about-link">Política de tratamiento de datos</a>
+                <a href="" class="more-about-link">Términos y Condiciones de Movistar Money</a>
+            </div>
+    
+            <div class="secure-section">
+                <img src="assets/security-movistar-logo.png" alt="" class="secure-section-symbol">
+                <p class="secure-section-content"> Contamos con un protocolo seguro para 
+                    proteger tus datos durante el proceso. 
+                </p>
+            </div>
         </div>
 
-        <div class="secure-section">
-            <img src="" alt="" class="secure-section-symbol">
-            <p class="secure-section-content"></p>
-        </div>
     </footer>
 </body>
+
