terms and condition content section

--- a/politica_cobranza.html
+++ b/politica_cobranza.html
@@ -21,9 +21,11 @@
         </nav>
     </header>
 
-    <!-- <section class="terms_condition_content">
-        <h2 class="terms_condition_content_title"></h2>
-        <p class="terms_condition_content_p"></p>
-    </section> -->
+    <section class="terms_condition_content">
+        <h2 class="terms_condition_content_title">Política de cobranzas</h2>
+        <p class="terms_condition_content_p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Id corrupti nisi, in quisquam vel laudantium numquam minima blanditiis excepturi suscipit similique. Assumenda amet sunt quas eaque maxime suscipit, ducimus laborum.
+        Accusamus pariatur quis nihil, ea, ab eligendi quam voluptatum, rem itaque laborum sapiente voluptates assumenda iste expedita odio laboriosam unde velit repellendus. Minima quo, tempore animi est soluta dolore libero!
+        Mollitia facere quia harum asperiores exercitationem voluptatibus perspiciatis ex, rem assumenda, maxime, molestias animi similique voluptates libero. Necessitatibus, impedit provident sequi, modi, eligendi blanditiis repellat natus corporis temporibus expedita ullam!</p>
+    </section>
 </body>
 </html>
