--- a/terminos_condiciones.html
+++ b/terminos_condiciones.html
@@ -20,5 +20,12 @@
             <a class="terms_condition_link" href="terminos_condiciones.html">Términos y Condiciones de Movistar Money</a>
         </nav>
     </header>
+
+    <section class="terms_condition_content">
+        <h2 class="terms_condition_content_title">Términos y Condiciones de Movistar Money</h2>
+        <p class="terms_condition_content_p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Id corrupti nisi, in quisquam vel laudantium numquam minima blanditiis excepturi suscipit similique. Assumenda amet sunt quas eaque maxime suscipit, ducimus laborum.
+        Accusamus pariatur quis nihil, ea, ab eligendi quam voluptatum, rem itaque laborum sapiente voluptates assumenda iste expedita odio laboriosam unde velit repellendus. Minima quo, tempore animi est soluta dolore libero!
+        Mollitia facere quia harum asperiores exercitationem voluptatibus perspiciatis ex, rem assumenda, maxime, molestias animi similique voluptates libero. Necessitatibus, impedit provident sequi, modi, eligendi blanditiis repellat natus corporis temporibus expedita ullam!</p>
+    </section>
 </body>
 </html>
