--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="footer-container">
             <div class="more-about">
                 <h4 class="more-about-title"> Más de nosotros </h4>
-                <a href="politica_cobranza.html #politica_cobranza" class="more-about-link">Política de cobranzas</a>
+                <a href="politica_cobranza.html" class="more-about-link">Política de cobranzas</a>
                 <a href="politica_tratamiento.html" class="more-about-link">Política de tratamiento de datos</a>
                 <a href="terminos_condiciones.html" class="more-about-link">Términos y Condiciones de Movistar Money</a>
             </div>
